# serdes-validation-framework

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  RELEASE_NOTES_v1.3.0.md  V1.3.0_UPDATE_SUMMARY.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_api_server.py  test_api_client.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml
docs/: CONTRIBUTING.md  INSTALL.md  README.md  USAGE.md  build.sh  conf.py  index.md  index.rst  requirements.txt  toc.md
docs/_static/: custom.css
docs/api/: eth_224g.md  index.md  instrument_control.md  mock_controller.md  pam4_analysis.md  pcie.md  reporting.md  rest-api.md  usage.md  usb4_thunderbolt.md  visualization.md
docs/examples/: api_examples.md  data_analysis_examples.md  mock_controller_examples.md  mock_examples.md  pcie_examples.md  reporting_examples.md  testing_examples.md
docs/guides/: cicd.md  environment_vars.md  installation.md  instrument_setup.md  jupyter_dashboard_guide.md  stress_testing.md  stress_testing_overview.md  testing.md  troubleshooting.md  visualization.md
docs/reference/: configuration.md
docs/tutorials/: 224g_validation.md  getting_started.md  mock_testing.md  pam4_analysis.md  pcie_validation.md  troubleshooting_guide.md
docs/usb4/: api-reference.md  index.md  quickstart.md
docs/usb4/certification/: index.md  intel-requirements.md  thunderbolt4.md
docs/usb4/examples/: basic-validation.md
docs/usb4/guides/: best-practices.md
examples/: README.md  advanced_usb4_validation_example.py  comprehensive_visualization_example.py  data_analysis_example.py  eth_224g_example.py  example_index.py  framework_integration_example.py  jupyter_dashboard_example.py  jupyter_eye_diagram_dashboard.ipynb  loopback_stress_test_example.py  multi_protocol_comparison.py  pam4_analysis_example.py  pcie_example.py  test_sequence_example.py  usb4_basic_validation_example.py  usb4_jitter_analysis_demo.py  usb4_link_recovery_demo.py  usb4_power_management_demo.py  usb4_quick_start.py  usb4_thunderbolt_certification_example.py  usb4_tunneling_example.py
examples/config/: comprehensive_device_chain.json  security_test_config.json
scripts/: README.md  comprehensive_validation_suite.py  data_analysis.py  data_collection.py  eth_224g_validation.py  instrument_control.py  multi_protocol_validation.py  pcie_validation.py  run_loopback_stress_test.py  test_sequence.py  usb4_validation.py
src/serdes_validation_framework/: __init__.py  framework_integration.py  protocol_detector.py
src/serdes_validation_framework/api/: __init__.py  app.py  cli.py  core.py  models.py  routes.py
src/serdes_validation_framework/bert_integration/: __init__.py  bert_analyzer.py  bert_controller.py  bert_hooks.py
src/serdes_validation_framework/data_analysis/: __init__.py  analyzer.py  eye_diagram.py  eye_masks.py  nrz_analyzer.py  pam4_analyzer.py
src/serdes_validation_framework/data_collection/: __init__.py  data_collector.py
src/serdes_validation_framework/instrument_control/: __init__.py  controller.py  mock_controller.py  mode_switcher.py  pcie_analyzer.py  scope_224g.py  usb4_mock_data_generator.py  usb4_pattern_generator.py  usb4_power_meter.py  usb4_scope_controller.py  usb4_sync_controller.py
src/serdes_validation_framework/jupyter_dashboard/: __init__.py  eye_diagram_dashboard.py  interactive_plots.py  waveform_analyzer.py
src/serdes_validation_framework/protocols/: __init__.py
src/serdes_validation_framework/protocols/ethernet_224g/: __init__.py  compliance.py  constants.py  training.py
src/serdes_validation_framework/protocols/pcie/: __init__.py  compliance.py  constants.py  equalization.py  link_training.py
src/serdes_validation_framework/protocols/pcie/dual_mode/: __init__.py  (+3 more)
src/serdes_validation_framework/protocols/usb4/: __init__.py  base.py  compliance.py  constants.py  eye_diagram.py  jitter_analyzer.py  link_recovery.py  link_training.py  mock_test_validator.py  mock_tunneling_simulator.py  performance.py  power_management.py  reporting.py  signal_analyzer.py  stress_testing.py  tunneling.py  visualization.py
src/serdes_validation_framework/stress_testing/: __init__.py  loopback_stress_test.py
src/serdes_validation_framework/test_fixtures/: __init__.py  environmental_monitor.py  fixture_controller.py
src/serdes_validation_framework/test_sequence/: __init__.py  dual_mode_sequence.py  eth_224g_sequence.py  pcie_sequence.py  sequencer.py  usb4_sequence.py
src/serdes_validation_framework/visualization/: __init__.py  base_visualizer.py  comparison.py  dashboard.py  eye_diagram.py  protocol_visualizers.py
tests/: README.md  TEST_ORGANIZATION.md  __init__.py  conftest.py  mock_pyvisa.py  run_tests.py  test_api.py  test_basic_functionality.py  test_basic_imports.py  test_certification_comprehensive.py  test_daisy_chain_comprehensive.py  test_data_analysis.py  test_data_collection.py  test_dual_mode.py  test_eth_224g_sequence.py  test_framework_integration.py  test_instrument_control.py  test_jupyter_dashboard.py  test_multi_protocol.py  test_nrz_analyzer.py  test_pam4_analyzer.py  test_pcie_analyzer.py  test_pcie_integration.py  test_pcie_sequence.py  test_scope_224g.py  test_security_comprehensive.py  test_stress_testing.py  test_summary.py  test_test_sequence.py  test_tunneling_comprehensive.py  test_usb4_comprehensive.py
tests/integration/: test_multi_protocol_integration.py  test_usb4_integration.py
tests/legacy/: mock_pyvisa.py  test_data_collection.py  test_dual_mode.py  test_eth_224g_sequence.py  test_instrument_control.py  test_nrz_analyzer.py  test_pam4_analyzer.py  test_pcie_integration.py  test_pcie_sequence.py  test_scope_224g.py  test_test_sequence.py  test_usb4_jitter_analyzer.py  test_usb4_link_recovery.py  test_usb4_power_management.py  test_usb4_signal_analyzer.py  test_usb4_tunneling.py
tests/mocks/: __init__.py  analyzer.py  eye_diagram.py  framework_integration.py  multi_protocol.py  pcie_analyzer.py  usb4_comprehensive.py
tests/performance/: test_usb4_performance_regression.py
(+6 files in other folders)
