[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serdes-validation-framework"
version = "1.2.0"
description = "A comprehensive framework for validating high-speed SerDes protocols."
authors = [
    {name = "Mudit Bhargava", email = "muditbhargava666@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = [
    "SerDes",
    "high-speed",
    "validation",
    "data collection",
    "data analysis",
    "instrument control",
    "GPIB",
    "automation"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: System :: Hardware :: Hardware Drivers"
]

dependencies = [
    "pyvisa",
    "pyvisa-py",
    "pandas",
    "matplotlib",
    "seaborn",
    "gpib-ctypes",
    "mock",
    "pytest",
    "zeroconf",
    "numpy",
    "scipy>=1.13.1",
    "scikit-learn"
]

[project.urls]
"Homepage" = "https://github.com/muditbhargava66/serdes-validation-framework"
"Documentation" = "https://github.com/muditbhargava66/serdes-validation-framework/tree/main/docs"
"Source" = "https://github.com/muditbhargava66/serdes-validation-framework"
"Tracker" = "https://github.com/muditbhargava66/serdes-validation-framework/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 130
target-version = "py310"
ignore = ["W293", "W291", "F841", "N803", "N806", "B904", "B017"]

# Extend select rules
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "C90",  # mccabe
    "I",    # isort
    "N",    # pep8-naming
    "B",    # flake8-bugbear
]

exclude = [
    ".git",
    "__pycache__",
    "venv",
    "env",
    ".venv",
    ".env",
    "build",
    "dist"
]

[tool.ruff.format]
# Quote style configuration
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# Ignore specific rules in specific files
# ignore-init-module-imports = true

[tool.isort]
profile = "black"
line_length = 130

[tool.black]
line-length = 130